add endpoint to create a follow
