# app/serializers/following_serializer.rb
@@ -1,0 +1,5 @@
+class FollowingSerializer
+  include JSONAPI::Serializer
+
+  attributes :id, :follower_id, :followee_id, :created_at, :updated_at
+end
